--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "lottie-react": "^2.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.6",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-select": "^5.2.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
